--- a/js project/ai summarizer extension/manifest.json
+++ b/js project/ai summarizer extension/manifest.json
@@ -22,7 +22,7 @@
         "service_worker": "background.js"
     },
 
-    "option_page": "options.html",
+    "options_page": "options.html",
 
     "host_permissions": ["<all_urls>"]
 }
